--- a/download.html
+++ b/download.html
@@ -6,53 +6,57 @@
 <title>Download Solari</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:'Montserrat', sans-serif; background:#0a0a0a; color:#fff; text-align:center; min-height:100vh; display:flex; justify-content:center; align-items:center; flex-direction:column; }
-h1 { font-size:3rem; color:#FFD700; text-shadow:0 0 10px #FFD700; margin-bottom:20px; }
-p { color:#ccc; margin-bottom:30px; }
-.btn { padding:15px 50px; border-radius:10px; background:#FFD700; color:#000; font-weight:bold; font-size:1.2rem; text-decoration:none; display:inline-block; box-shadow:0 0 5px #FFD700; }
-.btn:hover { background:#FFC700; box-shadow:0 0 15px #FFD700; }
-
-/* Particles */
-.particle { position:absolute; width:6px; height:6px; background:#FFD700; border-radius:50%; opacity:0.5; animation: float 12s linear infinite; z-index:0; }
-@keyframes float { 0% { transform: translateY(0) translateX(0); } 50% { transform: translateY(-200px) translateX(50px); } 100% { transform: translateY(0) translateX(-50px); } }
+body{margin:0;font-family:'Montserrat',sans-serif;background:#0a0a0a;color:#fff;text-align:center;overflow:hidden;}
+nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.7);z-index:100;}
+.nav-left{display:flex;align-items:center;gap:10px;}
+.nav-left div{font-weight:bold;font-size:1.5rem;color:#FFD700;text-shadow:0 0 5px #FFD700;cursor:pointer;display:flex;align-items:center;gap:10px;}
+.nav-left img{width:24px;height:24px;cursor:pointer;filter:invert(100%);}
+.nav-center{display:flex;gap:30px;justify-content:center;flex:1;font-weight:bold;}
+.nav-center a{color:#fff;text-decoration:none;cursor:pointer;}
+.nav-center a:hover{text-decoration:underline;}
+h1{font-size:3rem;color:#FFD700;margin:50px 0 20px;text-shadow:0 0 10px #FFD700;}
+p{color:#ccc;margin-bottom:40px;font-size:1.2rem;}
+#downloadBtn{padding:16px 50px;font-size:1.2rem;font-weight:bold;border-radius:8px;background:#FFD700;color:#000;cursor:pointer;opacity:0;transition:0.3s;}
+#downloadBtn.enabled{opacity:1;}
+.particle{position:absolute;width:6px;height:6px;background:#FFD700;border-radius:50%;opacity:0.5;animation:float 12s linear infinite;}
+@keyframes float{0%{transform:translateY(0) translateX(0);}50%{transform:translateY(-200px) translateX(50px);}100%{transform:translateY(0) translateX(-50px);}}
 </style>
 </head>
 <body>
 
-<h1>Download Solari</h1>
-<p id="statusMessage">Checking login status...</p>
-<a id="downloadBtn" class="btn" href="PLACEHOLDER FILE" style="display:none;">Download Now</a>
+<nav>
+  <div class="nav-left">
+    <div onclick="window.location.href='home.html'">solari.lol</div>
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" onclick="window.open('https://discord.gg/FAXcd5cwYr','_blank')">
+  </div>
+  <div class="nav-center">
+    <a href="home.html#about">About</a>
+    <a href="home.html#features">Features</a>
+  </div>
+</nav>
 
-<!-- Particles -->
-<div class="particle" style="top:10%; left:5%; animation-duration:15s;"></div>
-<div class="particle" style="top:30%; left:20%; animation-duration:12s;"></div>
-<div class="particle" style="top:50%; left:50%; animation-duration:18s;"></div>
-<div class="particle" style="top:70%; left:75%; animation-duration:10s;"></div>
-<div class="particle" style="top:85%; left:60%; animation-duration:14s;"></div>
+<h1 style="padding-top: 45px;">Download Solari</h1>
+<p>You must be logged in to download the mod.</p>
+<button id="downloadBtn">Download Now</button>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
-<script>
-const supabase = supabase.createClient(
-  'https://oukiobfulehpxeotntgi.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im91a2lvYmZ1bGVocHhlb3RudGdpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY2MjUxMTEsImV4cCI6MjA3MjIwMTExMX0.63G-x-omfwpmJR-MiJS8ohAnwHsMvlVUkTCoY1FzAz0'
-);
+<div class="particle" style="top:10%;left:5%;animation-duration:15s;"></div>
+<div class="particle" style="top:30%;left:20%;animation-duration:12s;"></div>
+<div class="particle" style="top:50%;left:50%;animation-duration:18s;"></div>
+<div class="particle" style="top:70%;left:75%;animation-duration:10s;"></div>
+<div class="particle" style="top:85%;left:60%;animation-duration:14s;"></div>
 
-const downloadBtn = document.getElementById('downloadBtn');
-const statusMessage = document.getElementById('statusMessage');
-
-async function checkSession() {
-    const { data: { session } } = await supabase.auth.getSession();
-    if(session && session.user) {
-        statusMessage.style.display = 'none';
-        downloadBtn.style.display = 'inline-block';
-    } else {
-        statusMessage.textContent = 'You must log in first.';
-        setTimeout(() => { window.location.href = 'auth.html'; }, 1000);
-    }
+<script type="module">
+import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+const supabase=createClient('https://oukiobfulehpxeotntgi.supabase.co','YOUR_ANON_KEY_HERE');
+const downloadBtn=document.getElementById('downloadBtn');
+async function checkUser(){
+    const {data:{session}}=await supabase.auth.getSession();
+    if(session&&session.user){downloadBtn.classList.add('enabled');}
+    else{window.location.href='auth.html';}
 }
-
-checkSession();
+downloadBtn.onclick=()=>{if(downloadBtn.classList.contains('enabled')){window.location.href='thankyou.html';}};
+checkUser();
 </script>
+
 </body>
 </html>
