Change Supabase client configuration
Updated Supabase client initialization with new URL and key.

--- a/auth.html
+++ b/auth.html
@@ -40,7 +40,7 @@ button.authBtn:hover{background:#FFC700;}
 
 <script type="module">
 import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
-const supabase=createClient('https://oukiobfulehpxeotntgi.supabase.co','YOUR_ANON_KEY_HERE');
+const supabase=createClient('https://aadsonfbyzrjaefvmjfc.supabase.co','eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFhZHNvbmZieXpyamFlZnZtamZjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE3MjI2NjksImV4cCI6MjA4NzI5ODY2OX0.GKFDz51cqrZu89DTyYX3C_ktCkY9ZJkqQwDRXmb0lvk');
 async function checkSession(){const {data:{session}}=await supabase.auth.getSession();if(session&&session.user){window.location.href='home.html';}}
 checkSession();
 const emailInput=document.getElementById('email');const passwordInput=document.getElementById('password');const authBtn=document.getElementById('authBtn');const message=document.getElementById('message');
